<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kurzbezeichnung_label_titel"/>
        <AutoCompleteTextView
            android:id="@+id/input_kurzbezeichnung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titel_label_titel"/>
        <AutoCompleteTextView
            android:id="@+id/input_titel_der_quelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autoren_titel"/>
        <AutoCompleteTextView
            android:id="@+id/input_autoren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verlag_titel"/>
        <AutoCompleteTextView
            android:id="@+id/input_verlag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publikationsdatum_titel"/>
        <AutoCompleteTextView
            android:id="@+id/input_publikationsdatum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_source_text"
            android:onClick="onButtonClick"/>
    </LinearLayout>
</ScrollView>